--- a/components/common/Navbar/Navbar.module.css
+++ b/components/common/Navbar/Navbar.module.css
@@ -1,10 +1,20 @@
 .root {
+  position: sticky;
+  top: 0;
+  z-index: 999;
   height: 110px;
-  width: 80%;
+  width: 100%;
+  padding-left: 20rem;
+  padding-right: 20rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin: 0 auto;
+}
+
+.root h1 {
+  font-weight: 100;
+  cursor: pointer;
 }
 
 .root ul {
