--- a/components/sections/HeroSection/HeroSection.module.css
+++ b/components/sections/HeroSection/HeroSection.module.css
@@ -1,5 +1,31 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap");
+
 .root {
-  width: 300px;
-  height: 300px;
-  background-color: green;
+  height: 90vh;
+  overflow: hidden;
+}
+
+.heroContent {
+  position: absolute;
+  top: 50%;
+  right: 50%;
+  transform: translate(50%, -50%);
+}
+
+.heroContent h1 {
+  letter-spacing: 1px;
+  font-family: "Roboto";
+  font-size: 5rem;
+  font-weight: 100;
+  text-align: justify;
+  /* background-image: linear-gradient(60deg, #e21143, #ffb03a);
+  background-clip: text;
+  color: transparent; */
+}
+
+.heroContent p {
+  color: rgb(29, 164, 182);
+  font-weight: 100;
+  letter-spacing: 1px;
+  font-size: 2.5rem;
 }
