--- a/components/sections/AboutSection/AboutSection.module.css
+++ b/components/sections/AboutSection/AboutSection.module.css
@@ -1,4 +1,52 @@
 .root {
-  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 1000px;
+  /* margin-top: 4rem; */
   border-bottom: 1px solid white;
+}
+
+.mainPanel {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  flex: 1;
+  width: 100%;
+}
+
+.profile {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 35%;
+  height: 40%;
+  align-self: stretch;
+}
+
+.photo {
+  width: 250px;
+  height: 250px;
+  border-radius: 100%;
+  border: 1px solid red;
+}
+
+.social {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 1.4rem;
+  height: 50px;
+  width: 250px;
+}
+
+.icon {
+  height: 50px;
+  width: 50px;
+}
+
+.aboutInfo {
+  width: 55%;
+  height: 50%;
+  border: 1px solid red;
 }
