--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,7 @@
+html {
+  scroll-behavior: smooth;
+}
+
 html,
 body {
   padding: 0;
@@ -16,5 +20,7 @@ a {
 }
 
 .active {
-  color: red;
+  padding-bottom: 10px;
+  color: #fa9dea;
+  border-bottom: 4px solid #fa9dea;
 }
