--- a/components/sections/HeroSection/HeroSection.module.css
+++ b/components/sections/HeroSection/HeroSection.module.css
@@ -18,6 +18,7 @@
   font-size: 5rem;
   font-weight: 100;
   text-align: justify;
+  /* color: rgba(255, 255, 255, 0.2); */
   /* background-image: linear-gradient(60deg, #e21143, #ffb03a);
   background-clip: text;
   color: transparent; */
