--- a/components/sections/AboutSection/AboutSection.module.css
+++ b/components/sections/AboutSection/AboutSection.module.css
@@ -28,7 +28,7 @@
   width: 250px;
   height: 250px;
   border-radius: 100%;
-  border: 1px solid red;
+  overflow: hidden;
 }
 
 .social {
@@ -47,5 +47,5 @@
 .aboutInfo {
   width: 55%;
   height: 50%;
-  border: 1px solid red;
+  text-align: justify;
 }
