--- a/components/sections/AboutSection/AboutSection.module.css
+++ b/components/sections/AboutSection/AboutSection.module.css
@@ -3,7 +3,6 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 1000px;
   border-bottom: 1px solid white;
 }
 
@@ -25,10 +24,10 @@
 }
 
 .photo {
-  width: 250px;
-  height: 250px;
-  border-radius: 100%;
-  overflow: hidden;
+  width: 400px;
+  height: 400px;
+  /* border-radius: 100%; */
+  /* overflow: hidden; */
 }
 
 .social {
@@ -42,6 +41,10 @@
 .icon {
   height: 50px;
   width: 50px;
+}
+
+.root h2 {
+  margin: 5rem 0 5rem 0;
 }
 
 .aboutInfo {
