--- a/components/sections/ContactSection/ContactSection.module.css
+++ b/components/sections/ContactSection/ContactSection.module.css
@@ -1,16 +1,31 @@
 .root {
-  /* height: 100vh; */
+  border-bottom: 1px solid white;
+}
+
+.root h1 {
+  font-weight: 300;
+  letter-spacing: 1px;
+}
+
+.root p {
+  text-align: justify;
+  font-weight: 100;
+  letter-spacing: 1px;
+  color: #028dff; /* CHANGE THIS COLOR */
+}
+
+.flexContainer {
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  border-bottom: 1px solid white;
+  margin-top: 4rem;
 }
 
 .contactForm {
   width: 50%;
   height: 45vh;
-  border: 1px solid red;
+  padding-top: 2rem;
 }
 
 .globeContainer {
