--- a/components/sections/AboutSection/AboutSection.module.css
+++ b/components/sections/AboutSection/AboutSection.module.css
@@ -43,6 +43,22 @@
   width: 50px;
 }
 
+.facebookIcon:hover {
+  fill: #4267b2;
+}
+
+.githubIcon:hover {
+  fill: #6e5494;
+}
+
+.linkedInIcon:hover {
+  fill: #0077b5;
+}
+
+.twitterIcon:hover {
+  fill: #1da1f2;
+}
+
 .root h2 {
   margin: 5rem 0 5rem 0;
 }
