Started working on work section.

--- a/components/sections/WorkSection/WorkSection.module.css
+++ b/components/sections/WorkSection/WorkSection.module.css
@@ -1,4 +1,9 @@
 .root {
-  height: 100vh;
+  /* height: 100vh; */
   border-bottom: 1px solid white;
+}
+
+.workContainer {
+  /* height: 800px;
+  overflow: auto; */
 }
