--- a/components/ui/Card/Card.module.css
+++ b/components/ui/Card/Card.module.css
@@ -1,33 +1,46 @@
 .root {
-  width: 90%;
-  height: 400px;
+  width: 100%;
+  height: 300px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  border: 1px solid red;
   margin-bottom: 4px;
 }
 
-.root:first-child {
-  width: 50%;
-}
-
-.presentationGroup {
-  position: relative;
-  width: 100%;
+.topRow {
+  min-width: 100%;
   display: flex;
+  justify-content: space-between;
   align-items: center;
 }
 
-.img {
-  display: inline-block;
-  width: 250px;
-  height: 250px;
+.image {
+  max-width: 50%;
+  height: 350px;
   border: 1px solid red;
 }
 
+.presentationGroup {
+  min-width: 50%;
+  height: 150px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .title {
-  position: absolute;
-  right: 30%;
+  align-self: flex-start;
+}
+
+.description {
+  text-align: justify;
+}
+
+.bottomRow {
+  display: flex;
+  justify-content: space-between;
+  align-self: flex-end;
+  min-width: 100px;
 }
