--- a/components/common/Footer/Footer.module.css
+++ b/components/common/Footer/Footer.module.css
@@ -1,6 +1,5 @@
 .root {
-  height: 10vh;
-  /* width: 100%; */
+  height: 100px;
   display: flex;
   justify-content: center;
   align-items: center;
