--- a/components/ui/Card/Card.module.css
+++ b/components/ui/Card/Card.module.css
@@ -1,11 +1,15 @@
 .root {
   width: 100%;
-  height: 300px;
+  height: 324px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
   margin-bottom: 4px;
+}
+
+.root .presentationGroup:first-of-type {
+  margin-left: 1rem;
 }
 
 .topRow {
@@ -31,10 +35,16 @@
 }
 
 .title {
-  align-self: flex-start;
+  align-self: center;
+  font-size: 1.2rem;
+  font-weight: 600;
+  letter-spacing: 1px;
+  text-transform: uppercase;
 }
 
 .description {
+  font-weight: 100;
+  letter-spacing: 1px;
   text-align: justify;
 }
 
@@ -42,5 +52,6 @@
   display: flex;
   justify-content: space-between;
   align-self: flex-end;
-  min-width: 100px;
+  min-width: 90px;
+  margin-bottom: 1rem;
 }
