--- a/components/ui/Card/Card.module.css
+++ b/components/ui/Card/Card.module.css
@@ -1,6 +1,6 @@
 .root {
   width: 100%;
-  height: 324px;
+  /* height: 324px; */
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -54,4 +54,21 @@
   align-self: flex-end;
   min-width: 90px;
   margin-bottom: 1rem;
+}
+
+.icon {
+  height: 40px;
+  width: 40px;
+}
+
+.githubIcon:hover {
+  fill: #6e5494;
+}
+
+.liveIcon {
+  transition: 0.2s all;
+}
+
+.liveIcon:hover {
+  fill: #a23333;
 }
