--- a/components/Form/Form.module.css
+++ b/components/Form/Form.module.css
@@ -1,5 +1,5 @@
 .root {
-  height: 80%;
+  /* height: 80%; */
   width: 80%;
   display: flex;
   flex-direction: column;
@@ -15,4 +15,10 @@
   cursor: pointer;
   outline: none;
   font-size: inherit;
+}
+
+.errorMessage {
+  font-size: 0.8rem;
+  font-weight: 100;
+  margin: 6px 0 6px 0;
 }
