--- a/components/Input/Input.module.css
+++ b/components/Input/Input.module.css
@@ -1,11 +1,11 @@
 .input {
   width: 100%;
-  height: 3.5rem;
+  height: 3em;
 }
 
 .textArea {
   width: 100%;
-  height: 7.5rem;
+  height: 8em;
 }
 
 .input,
