--- a/components/sections/AboutSection/AboutSection.module.css
+++ b/components/sections/AboutSection/AboutSection.module.css
@@ -25,14 +25,12 @@
   align-items: center;
   width: 35%;
   height: 40%;
-  align-self: stretch;
+  /* align-self: stretch; */
 }
 
 .photo {
   width: 400px;
   height: 400px;
-  /* border-radius: 100%; */
-  /* overflow: hidden; */
 }
 
 .social {
@@ -72,4 +70,34 @@
   width: 55%;
   height: 50%;
   text-align: justify;
+}
+
+@media (max-width: 1180px) {
+  .mainPanel {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .aboutInfo {
+    margin-top: 2rem;
+    width: 90%;
+  }
+}
+
+@media (max-width: 600px) {
+  .icon {
+    width: 40px;
+    height: 40px;
+  }
+
+  .root h3 {
+    margin: 3rem 0 1.8rem 0;
+  }
+}
+
+@media (max-width: 460px) {
+  .photo {
+    width: 350px;
+    height: 350px;
+  }
 }
