Added contacts database to save the contacts. Created a http hook. Started working on optimization (Input component is now rendered after some prop changes)

--- a/components/sections/WorkSection/WorkSection.module.css
+++ b/components/sections/WorkSection/WorkSection.module.css
@@ -11,10 +11,6 @@
   border-bottom: 1px solid white;
 }
 
-.root div:first-of-type {
-  width: 60%;
-}
-
 .vintageMan {
   position: absolute;
   display: flex;
@@ -43,4 +39,16 @@
   padding: 8px;
   min-width: 100%;
   transform: skew(-25deg);
+}
+
+@media (min-width: 1365px) {
+  .root div:first-of-type {
+    width: 60%;
+  }
+}
+
+@media (max-width: 1364px) {
+  .vintageMan {
+    display: none;
+  }
 }
