--- a/components/ui/Button/Button.module.css
+++ b/components/ui/Button/Button.module.css
@@ -1,10 +1,6 @@
-.root:first-of-type {
-  margin-right: 1px;
-}
-
-@media all and (max-width: 30em) {
+/* @media all and (max-width: 30em) {
   .root {
     display: block;
     margin: 0.4em auto;
   }
-}
+} */
