--- a/components/sections/AboutSection/AboutSection.module.css
+++ b/components/sections/AboutSection/AboutSection.module.css
@@ -70,6 +70,33 @@
   width: 55%;
   height: 50%;
   text-align: justify;
+  position: relative;
+}
+
+.cta {
+  position: absolute;
+  right: 0;
+  display: inline-block;
+  cursor: pointer;
+  font-size: inherit;
+  font-weight: 600;
+  margin-bottom: 2rem;
+  text-align: right !important;
+  text-decoration: none;
+  touch-action: manipulation;
+  transition: all 300ms cubic-bezier(0.23, 1, 0.32, 1);
+}
+
+.cta:disabled {
+  pointer-events: none;
+}
+
+.cta:hover {
+  transform: translateY(-2px);
+}
+
+.cta:active {
+  transform: translateY(0);
 }
 
 @media (max-width: 1180px) {
