--- a/components/ui/Container/Container.module.css
+++ b/components/ui/Container/Container.module.css
@@ -4,7 +4,15 @@
 }
 
 .container section {
-  padding-top: 6rem;
+  padding-top: 3rem;
+}
+
+.container section h1 {
+  font-size: 5rem;
+  letter-spacing: 8px;
+  margin-bottom: 3rem;
+  -webkit-text-stroke: 1px #ffffff;
+  color: transparent;
 }
 
 .container section:last-child {
@@ -14,5 +22,9 @@
 @media (max-width: 768px) {
   .container {
     max-width: 95%;
+  }
+
+  .container section h1 {
+    font-size: 3rem;
   }
 }
