--- a/components/ui/Container/Container.module.css
+++ b/components/ui/Container/Container.module.css
@@ -11,7 +11,9 @@
   font-size: 5rem;
   letter-spacing: 8px;
   margin-bottom: 3rem;
-  -webkit-text-stroke: 1px #ffffff;
+  -webkit-text-fill-color: transparent;
+  -webkit-text-stroke-width: 1px;
+  /* -webkit-text-stroke-color: black; */
   color: transparent;
 }
 
