--- a/components/sections/AboutSection/AboutSection.module.css
+++ b/components/sections/AboutSection/AboutSection.module.css
@@ -6,11 +6,6 @@
   border-bottom: 1px solid white;
 }
 
-.root h1 {
-  align-self: flex-start;
-  margin: 0 0 2rem 2rem;
-}
-
 .mainPanel {
   display: flex;
   flex-direction: row;
@@ -25,7 +20,6 @@
   align-items: center;
   width: 35%;
   height: 40%;
-  /* align-self: stretch; */
 }
 
 .photo {
@@ -108,6 +102,14 @@
   .aboutInfo {
     margin-top: 2rem;
     width: 90%;
+  }
+
+  .aboutInfo h2 {
+    text-align: center;
+  }
+
+  .cta {
+    margin-bottom: 2rem;
   }
 }
 
