--- a/components/sections/HeroSection/HeroSection.module.css
+++ b/components/sections/HeroSection/HeroSection.module.css
@@ -14,6 +14,10 @@
   font-family: "Raleway", sans-serif;
 }
 
+.heading {
+  color: #ffffff !important;
+}
+
 .backgroundVideo {
   width: 100% !important;
   height: 100% !important;
